# AlphaSphereDotAI.github.io

./: .deepsource.toml  .gitignore  README.md  devenv.nix  flutter_service_worker.js  index.html  main.dart.js  pubspec.yaml  pyproject.toml  rxconfig.py
.github/: mergify.yml  renovate.json
.github/lint/: .yamllint.yaml
.github/workflows/: ci.yaml  ci.yml  main.yml
alphaspheredotai_github_io/: alphaspheredotai_github_io.py  component.py
alphaspheredotai_github_io/pages/: __init__.py  contact.py  home.py  projects.py  team.py
alphaspheredotai_github_io/team/: abdelrahman_amin.py  abdelrahman_mostafa.py  mohamed_hisham.py  team_member.py  yousef_mohamed.py
alphaspheredotai_github_io/team/member/: __init__.py  abdelrahman_amin.py  abdelrahman_mostafa.py  mohamed_hisham.py  yousef_mohamed.py
assets/: NOTICES
lib/: main.dart
test/: widget_test.dart
web/: index.html
